<resources>
    <string name="app_name">PrecoMuitoJusto</string>
    <string name="nome">Nome do Produto</string>
    <string name="hintNome">Digite o nome do Produto</string>
    <string name="valor">Valor</string>
    <string name="valorProduto">Digite o valor do produto</string>
    <string name="qtdParc">Qtd. Parc</string>
    <string name="entrada">Com Entrada</string>
    <string name="juros">Juros( % )</string>
    <string name="hintJuros"> 0 </string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnApagar">Limpar Dados</string>
</resources>
